add login , aycho, and callback

--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "art-template": "^4.13.2",
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "config": "^3.3.1",
     "cookie-parser": "^1.4.5",
     "ejs": "*",
     "express": "^3.2.6",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "monk": "^3.1.3"
   }
